style: trying to fix overflow issue on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,10 +38,6 @@ body {
     // responsive to tablet
     @media only screen and (max-width: $mobile) {
         background-color: $color1;
-        max-height: 100vh;
-        max-width: 100vw;
-        overflow-y: hidden;
-        overflow-x: hidden;
     }
 }
 
